src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFilterCriteria__c</fullName>
        <description>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</description>
        <inlineHelpText>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</inlineHelpText>
        <label>Billing Contact Filter Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFormat__c</fullName>
        <description>Specifies Billing Contact setup format for a given account.</description>
        <inlineHelpText>Specifies Billing Contact setup format for a given account.</inlineHelpText>
        <label>Billing Contact Format</label>
        <picklist>
            <picklistValues>
                <fullName>Comma Separated Values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Criteria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingDayOfMonth__c</fullName>
        <description>The billing day of month for the account. Specific Day of Month, End of Month, etc</description>
        <inlineHelpText>The billing day of month for the account. Specific Day of Month, End of Month, etc</inlineHelpText>
        <label>Billing Day Of Month</label>
        <picklist>
            <picklistValues>
                <fullName>1st of the Month</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2nd of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21st of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22nd of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23rd of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30th of the Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalendarCycleStart__c</fullName>
        <description>Indicates which calendar month the billing cycle will align to for a given account.</description>
        <inlineHelpText>Indicates which calendar month the billing cycle will align to for a given account.</inlineHelpText>
        <label>Calendar Cycle Start</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CreditMemoEmailTemplate__c</fullName>
        <description>Specifies the current selected Credit Memo Email Template of an account.</description>
        <inlineHelpText>Specifies the current selected Credit Memo Email Template of an account.</inlineHelpText>
        <label>Credit Memo Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultCreditMemoTemplate__c</fullName>
        <description>The name of the default Credit Memo template for generating Credit Memo documents</description>
        <inlineHelpText>The name of the default Credit Memo template for generating Credit Memo documents</inlineHelpText>
        <label>Default Credit Memo Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceStatementTemplate__c</fullName>
        <description>The name of the default template for generating invoice statements</description>
        <inlineHelpText>The name of the default template for generating invoice statements</inlineHelpText>
        <label>Default Invoice Statement Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceEmailTemplate__c</fullName>
        <description>Specifies the current selected Invoice Email Template for a given account.</description>
        <inlineHelpText>Specifies the current selected Invoice Email Template for a given account.</inlineHelpText>
        <label>Invoice Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <picklist>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Zip_Code_Is_in_Billing_State</fullName>
        <active>true</active>
        <description>Validates that the account Billing Zip/Postal Code is valid by looking up the first five characters of the value in a custom object called Zip_Code__c that contains a record for every valid zip code in the US. If the zip code is not found in the Zip_Code_</description>
        <errorConditionFormula>VLOOKUP(
$ObjectType.My_Custom_Object__c.Fields.City__c,
$ObjectType.My_Custom_Object__c.Fields.Name,
BillingPostalCode) &lt;&gt; BillingCity</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>Billing Zip Code does not exist in specified Billing State.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Canadian_Billing_Postal_Code</fullName>
        <active>false</active>
        <description>Validates that the account Billing Zip/Postal Code is in the correct format if Billing Country is Canada.</description>
        <errorConditionFormula>AND(
OR(BillingCountry = &quot;CAN&quot;, BillingCountry = &quot;CA&quot;, BillingCountry = &quot;Canada&quot;),
NOT(REGEX(BillingPostalCode, &quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;))
)</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>Canadian postal code must be in A9A 9A9 format.</errorMessage>
    </validationRules>
</CustomObject>